fix alignment in connections

--- a/CSS/profile-page/style.css
+++ b/CSS/profile-page/style.css
@@ -8,10 +8,10 @@
 nav {
     background-color: black;
     color: white;
-    height: 60px;
+    height: 70px;
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0px;
@@ -19,7 +19,6 @@ nav {
 .nav-title {
     margin-left: 20px;
     font-weight: 400;
-    margin-left: 10%;
 }
 .nav-links {
     display: flex;
@@ -75,7 +74,9 @@ nav {
     align-items: flex-end;
     margin: 10px 0px;
 }
-
+.location p {
+    font-weight: 400;
+}
 .user-info p {
     width: 60%;
     font-size: 0.95em;
@@ -151,6 +152,17 @@ section {
 .connection-img {
     width: 50px;
     margin-right: 15px;
+}
+.profile-row {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.your-connections .connection {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 .view-more a {
     color: #4287f5;
